--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <%= form_for @user do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name %>
-  <%= f.label :password %>
-  <%= f.text_field :password %>
+  <%= f.label :password_digest %>
+  <%= f.text_field :password_digest %>
   <%= f.label :happiness %>
   <%= f.text_field :happiness %>
   <%= f.label :nausea %>
