--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,10 +1,17 @@
-<%= @role %><br />
-<%= @user.name %><br />
-Mood: <%= @user.mood %><br />
-Height: <%= @user.height %><br />
-Tickets: <%= @user.tickets %><br />
-
-<%= link_to "See attractions", attractions_path %>
-
-
-<%= link_to "Log Out", logout_path %>
+<%= form_for @user do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+  <%= f.label :password %>
+  <%= f.text_field :password %>
+  <%= f.label :happiness %>
+  <%= f.text_field :happiness %>
+  <%= f.label :nausea %>
+  <%= f.text_field :nausea %>
+  <%= f.label :height %>
+  <%= f.text_field :height %>
+  <%= f.label :tickets %>
+  <%= f.text_field :tickets %>
+  <%= hidden_field_tag "user[admin]", '' %>
+  <%= check_box_tag "user[admin]", checked = true %>
+<%= f.submit %>
+<% end %>
