--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,17 +1,1 @@
-<%= form_for @user do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :password %>
-  <%= f.text_field :password %>
-  <%= f.label :happiness %>
-  <%= f.text_field :happiness %>
-  <%= f.label :nausea %>
-  <%= f.text_field :nausea %>
-  <%= f.label :height %>
-  <%= f.text_field :height %>
-  <%= f.label :tickets %>
-  <%= f.text_field :tickets %>
-  <%= hidden_field_tag "user[admin]", '' %>
-  <%= check_box_tag "user[admin]", checked = true %>
-<%= f.submit %>
-<% end %>
+<%= render 'form' %>
